--- a/home.css
+++ b/home.css
@@ -40,6 +40,35 @@ html, body {
 	padding-left:5px;
 }
 
+#content {
+	border:1px solid black;
+	position:absolute;
+	top:150px;
+	left:150px;
+	height:75%;
+	width:87.8%;
+	padding-left:5px;
+	padding-top:5px;
+}
+
+/* form button alignment */
+#login_buttons {
+	width:220px;
+	height:25px;
+}
+
+#login_buttons input[type=submit] {
+	float:right;
+	width:60px;
+	margin-left:5px;
+}
+
+#login_buttons input[type=reset] {
+	float:right;
+	width:60px;
+	margin-left:5px;
+}
+
 .usercp_button_inactive {
 	border-bottom:1px solid black;
 	width:115px;
@@ -47,9 +76,11 @@ html, body {
 }
 
 #nav_button_active {
+	text-decoration: none;
 	border:1px solid red;
 	width:80px;
 	text-align:center;
+	color: black;
 	margin-top:1px;
 	float:left;
 	margin-left:5px;
@@ -57,9 +88,11 @@ html, body {
 }
 
 .nav_button_inactive {
+	text-decoration: none;
 	border:1px solid red;
 	width:80px;
 	text-align:center;
+	color: black;
 	margin-top:1px;
 	float:left;
 	margin-left:5px;
